<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".presentation.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textNotes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_12sdp"
            android:fontFamily="@font/ubuntu_bold"
            android:includeFontPadding="false"
            android:text="@string/notes"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/_20sdp"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.SearchView
            android:id="@+id/searchView"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:layout_marginBottom="@dimen/_15sdp"
            android:background="@drawable/background_search"
            android:fontFamily="@font/ubuntu_regular"
            android:hint="@string/search_notes"
            android:focusable="false"
            android:theme="@style/SearchTheme"
            app:closeIcon="@drawable/round_close_24"
            app:iconifiedByDefault="false"
            app:searchIcon="@drawable/round_search_24"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorTextHint"
            android:textSize="@dimen/_13sdp"
            app:layout_constraintTop_toBottomOf="@id/textNotes"/>

<!--        <LinearLayout-->
<!--            android:id="@+id/layoutSeach"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginStart="@dimen/_8sdp"-->
<!--            android:layout_marginTop="@dimen/_15sdp"-->
<!--            android:layout_marginEnd="@dimen/_8sdp"-->
<!--            android:background="@drawable/background_search"-->
<!--            android:gravity="center_vertical"-->
<!--            android:orientation="horizontal"-->
<!--            android:paddingStart="@dimen/_10sdp"-->
<!--            android:paddingEnd="@dimen/_10sdp"-->
<!--            app:layout_constraintTop_toBottomOf="@id/textNotes">-->

<!--            <ImageView-->
<!--                android:layout_width="@dimen/_20sdp"-->
<!--                android:layout_height="@dimen/_20sdp"-->
<!--                android:contentDescription="@string/app_name"-->
<!--                android:src="@drawable/round_search_24"-->
<!--                app:tint="@color/colorSearchIcon" />-->

<!--            -->

<!--        </LinearLayout>-->

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/notesRecyclerview"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/_2sdp"
            android:layout_marginEnd="@dimen/_2sdp"
            android:clipToPadding="false"
            android:paddingStart="0dp"
            android:paddingEnd="@dimen/_12sdp"
            android:paddingBottom="@dimen/_12sdp"
            app:layout_constraintTop_toBottomOf="@id/searchView" />


        <ImageView
            android:id="@+id/imageAddNoteBtn"
            android:layout_width="@dimen/_60sdp"
            android:layout_height="@dimen/_60sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:background="@drawable/background_add_button"
            android:contentDescription="@string/app_name"
            android:padding="@dimen/_8sdp"
            android:src="@drawable/round_add_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:tint="@color/colorPrimary" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>